infra-aws/overlays/dev/redis-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis
  namespace: morupark-dev
spec:
  replicas: 1
  template:
    spec:
      containers:
      - name: redis
        resources:
          requests:
            memory: "64Mi"
            cpu: "25m"
          limits:
            memory: "128Mi"
            cpu: "50m"
